--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
 </section>
 
 
+<!-- Home Icons Section -->
+<section id="home-icons" class="py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4 text-center">
+        <i class="fas fa-cog fa-3x mb-2"></i>
+        <h3>Turning Gears</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, velit.</p>
+      </div>
+      <div class="col-md-4 mb-4 text-center">
+        <i class="fas fa-cloud fa-3x mb-2"></i>
+        <h3>Sending Data</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, velit.</p>
+      </div>
+      <div class="col-md-4 mb-4 d-inline-block text-center">
+        <i class="fas fa-cart-plus fa-3x mb-2"></i>
+        <h3>Helping You Earn</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, velit.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -107,6 +131,12 @@
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
+
+    // configuring carousel slider
+    $('.carousel').carousel({
+      interval: 4000,
+      pause: "hover"
+    })
   </script>
 </body>
 
