finished middle section

--- a/index.html
+++ b/index.html
@@ -112,14 +112,46 @@
       </div>
       <div class="col-md-4 mb-4 d-inline-block text-center">
         <i class="fas fa-cart-plus fa-3x mb-2"></i>
-        <h3>Helping You Earn</h3>
+        <h3>Making Money</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, velit.</p>
       </div>
-
     </div>
   </div>
 </section>
 
+
+<!-- Home Heading -->
+<section id="home-heading" class="p-5">
+  <div class="dark-overlay">
+    <div class="row">
+      <div class="col">
+        <div class="container pt-5">
+          <h1>Are You Ready to Get Started?</h1>
+          <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum deleniti hic eius ullam optio pariatur sint consectetur, veritatis nemo labore.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- Info Section -->
+
+<section id="info" class="py-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 align-self-center">
+        <h3>Lorem Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex explicabo aut quia iste suscipit ab?</p>
+        <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
+      </div>
+
+      <div class="col-md-6 align-self-center">
+        <img src="img/laptop.png" class="img-fluid" />
+      </div>
+    </div>
+  </div>
+</section>
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
