--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="img/favicon.png">
   <title>Techni by Sparks Full-Stack</title>
 </head>
 
