updated script tags

--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
 
-  <script>
+  <script type="text/javascript">
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
 
