updated accordion styles

--- a/services.html
+++ b/services.html
@@ -167,8 +167,8 @@
             <div class="col-md-6">
                  <div id="accordion">
                      <div class="card">
-                         <div class="card-header">
-                             <h5 class="mb-0">
+                         <div class="card-header accordion--border">
+                             <h5 class="mb-0 text-center">
                                  <a href="#collapseOne" data-toggle="collapse" data-parent="accordion">
                                      Question One
                                  </a>
@@ -182,8 +182,8 @@
                      </div>
 
                      <div class="card">
-                        <div class="card-header">
-                            <h5 class="mb-0">
+                        <div class="card-header accordion--border">
+                            <h5 class="mb-0 text-center">
                                 <a href="#collapseTwo" data-toggle="collapse" data-parent="accordion">
                                     Question Two
                                 </a>
@@ -197,8 +197,8 @@
                     </div>
 
                     <div class="card">
-                        <div class="card-header">
-                            <h5 class="mb-0">
+                        <div class="card-header accordion--border">
+                            <h5 class="mb-0 text-center">
                                 <a href="#collapseThree" data-toggle="collapse" data-parent="accordion">
                                     Question Three
                                 </a>
@@ -216,8 +216,8 @@
              <div class="col-md-6">
                 <div id="accordion">
                     <div class="card">
-                        <div class="card-header">
-                            <h5 class="mb-0">
+                        <div class="card-header accordion--border">
+                            <h5 class="mb-0 text-center">
                                 <a href="#collapseFour" data-toggle="collapse" data-parent="accordion">
                                     Question Four
                                 </a>
@@ -231,8 +231,8 @@
                     </div>
 
                     <div class="card">
-                       <div class="card-header">
-                           <h5 class="mb-0">
+                       <div class="card-header accordion--border">
+                           <h5 class="mb-0 text-center">
                                <a href="#collapseFive" data-toggle="collapse" data-parent="accordion">
                                    Question Five
                                </a>
@@ -246,8 +246,8 @@
                    </div>
 
                    <div class="card">
-                       <div class="card-header">
-                           <h5 class="mb-0">
+                       <div class="card-header accordion--border">
+                           <h5 class="mb-0 text-center">
                                <a href="#collapseSix" data-toggle="collapse" data-parent="accordion">
                                    Question Six
                                </a>
